# rust-as-lib

./: Cargo.toml
loader/: Cargo.toml
loader/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs
plugin1/: Cargo.toml  plugin1.rs
