[package]
name = "loader"
version = "0.1.0"
authors = ["Sebastian Kratzert"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8.3"
log = "0.4.21"
anyhow = "1.0.82"


[build-dependencies]
rustc_version = "0.4.0"